@@ -47,14 +47,11 @@ object-oriented programming language, etc.</p>
 "http://sourceforge.net"><img src=
 "http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
 width="210" height="62" border="0" alt=
-"SourceForge.net Logo"></a><br/>
-<iframe name="pollframe" src="/cgi-bin/poll.pl" type="text/html" width="100%" height="100%" frameborder=0>
-<p>The TOC should be here..</p>
-</iframe>
+"SourceForge.net Logo"></a>
 </td>
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2004/01/08 16:09:14 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/20 16:54:15 $</div>
 </body>
 </html>
